# ROS2_omni

./: CMakeLists.txt  README.md  package.xml
config/: omni_display.rviz
description/: robot.urdf.xacro  robot_core.xacro
launch/: rsp.launch.py
