<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ROS2_omni</name>
  <version>0.0.0</version>
  <description>mecanum wheel based ROS2 robot</description>
  <maintainer email="b.vanderhaagen76@gmail.com">Bart van der Haagen</maintainer>
  <license>Free for Use</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
